[gd_scene load_steps=6 format=3 uid="uid://cmpapwyc6jwba"]

[ext_resource type="PackedScene" uid="uid://8ave1i33ii2y" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://d038k4uvwogdj" path="res://player.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://bygg0qm4y8c5n" path="res://HUD.tscn" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://cn2xlvnlm1xjg" path="res://main.gd" id="5_main"]

[sub_resource type="Curve2D" id="Curve2D_7mycd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1000, 0, 0, 0, 0, 0, 1000, 1000, 0, 0, 0, 0, 0, 1000, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("5_main")
mob_scene = ExtResource("2_1bvp3")

[node name="Player" parent="." instance=ExtResource("3_lquwl")]
collision_mask = 2

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ScoreNumber" type="Node" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(500, 500)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7mycd")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Mob" parent="." instance=ExtResource("2_1bvp3")]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
